--- a/language/EN.json
+++ b/language/EN.json
@@ -185,8 +185,8 @@
             "SONG_DESC": "Uploads the song you wrote.",
             "NEED_TEXT_SONG": "*Please write a song!*\n*Example:* ```.song eminem - rap god```",
             "NO_RESULT": "*I couldn't find anything :(*",
-            "DOWNLOADING_SONG": "\n💠 Searching   ",
-            "UPLOADING_SONG": "*♦️ Feel the song🎶*",
+            "DOWNLOADING_SONG": "\n*Searching*\n",
+            "UPLOADING_SONG": "\n*Feel the song*\n",
             "VIDEO_DESC": "Downloads video from YouTube.",
             "NEED_VIDEO": "*Please write a video link!*\n*Example:* ```.video https://www.youtube.com/watch?v=nAFlVm5qeBc```",
             "DOWNLOADING_VIDEO": "*Downloading*",
